--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <title>Contacto</title>
 </head>
 <body>
-    <h1>Correo: eduardoszhdez@outlook.com</h1>
+    <h1>Correo: eduardoszhdez@email.com</h1>
+    <p>Estudiante</p>
 </body>
 </html>
